[package]
name = "lunokod"
version = "0.1.0"
authors = ["senet4er <senet4er@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", features = ["chrono", "sqlite", "r2d2"] }
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
tera = "0.11"
warp = "0.1"
